2001-05-17  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 1.76 released.

2001-05-17  Per Abrahamsen  <abraham@dina.kvl.dk>

	* root_system.C (RootSystem::RootSystem): Let `PotRtDpt' default
	to `Depth'.

	* crop_std.C (initialize): More support for planting.

	* action_with.C (output): New member function.

2001-05-16  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 1.75 released.

2001-05-16  Per Abrahamsen  <abraham@dina.kvl.dk>

	* vegetation.h, vegetation_crops.C, vegetation_permanent.C (sow):
	Ditto. 

	* vegetation_permanent.C, vegetation_crops.C, crop.C, crop_old.C,
	vegetation.h, crop.h, crop_std.C (initialize): Support planting.

2001-05-09  Per Abrahamsen  <abraham@dina.kvl.dk>

	* bioincorporation.C (speed): New member variable.
	(tick): Update it.
	(output): Log it.

2001-05-07  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 1.74 released.

2001-05-07  Per Abrahamsen  <abraham@dina.kvl.dk>

	* solute.C (tick): Less debug output.

	* select_flux_bottom.C (output_array): Use interval_border + 1.

	* condition.h, condition.C, condition_time.C (timestep): New
	member function.
	* select.h, select.C, select_flux_bottom.C, select_flux_top.C,
	select_interval.C (initialize): New `timestep' parameter. 
	Made `conv' a reference. 
	* log_select.C (LogSelect): Use them.
	* lib/log.dai: Use it.
	("Fertilizer Yearly"): Use crop seasons instead of calendar years.

2001-04-26  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 1.73 released.

2001-04-26  Per Abrahamsen  <abraham@dina.kvl.dk>

	* column_std.C, column_inorganic.C (tick): Don't clear variables
	here. 
	* column.h, column_base.C, column_std.C (tick): Do it here.
	* field.C, field.h (clear): Call it.
	* daisy.C (tick_logs): Call it.

2001-04-09  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 1.72 released.

2001-04-03  Per Abrahamsen  <abraham@dina.kvl.dk>

	* canopy_std.C (load_syntax): Fix dimensions.

	* crop_std.C (harvest): Fixed WBal and NBal declarations.
